fixed footer and spacing

--- a/css/home.css
+++ b/css/home.css
@@ -76,7 +76,7 @@
 
 footer{
     text-align: center;
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
     height: 2.5rem;      
@@ -241,7 +241,7 @@ body {
   font-weight: bold;
   display: flex;
   justify-content: center;
-  margin-top: 400px;
+  margin-top: 300px;
 }
 .socials {
     font-family: 'Montserrat', sans-serif;
